# vcpkg-tests

./: .appveyor.yml  .travis.yml  CMakeLists.txt  test.cpp
